// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logo with domain renders correctly 1`] = `
<body>
  <div>
    <div
      class="flex items-center space-x-2"
    >
      <svg
        class="h-6 text-gray-900 stroke-current"
        fill="none"
        viewBox="0 0 194 148"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 106.208L97.3883 17.8199L134.158 54.5894M185.07 41.8615L96.6814 130.25L59.9118 93.4803"
          stroke-width="25"
        />
      </svg>
      <div
        class="text-xl font-semibold"
      >
        <span
          class="text-gray-800"
        >
          PERFOLIO
        </span>
        <span
          class="uppercase text-blue-500"
        >
          domain
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`Logo without domain renders correctly 1`] = `
<body>
  <div>
    <div
      class="flex items-center space-x-2"
    >
      <svg
        class="h-6 text-gray-900 stroke-current"
        fill="none"
        viewBox="0 0 194 148"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 106.208L97.3883 17.8199L134.158 54.5894M185.07 41.8615L96.6814 130.25L59.9118 93.4803"
          stroke-width="25"
        />
      </svg>
      <div
        class="text-xl font-semibold"
      >
        <span
          class="text-gray-800"
        >
          PERFOLIO
        </span>
      </div>
    </div>
  </div>
</body>
`;
